--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,9 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
-steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+#steps:
+# - script: dotnet build --configuration $(buildConfiguration)
+  # displayName: 'dotnet build $(buildConfiguration)'
 - task: MSBuild@1
   inputs:
     solution: '**/*.sln'
