--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,8 @@ steps:
   inputs:
     command: 'build'
     projects: '**/try-db-code-web.csproj'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop-devops'
+    publishLocation: 'Container'
