--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,7 @@ steps:
   inputs:
     command: 'build'
     projects: '**/try-db-code-web.csproj'
-- task: PublishBuildArtifacts@1
+- task: PublishPipelineArtifact@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop-devops'
-    publishLocation: 'Container'
+    targetPath: $(System.DefaultWorkingDirectory)/bin/WebApp
+    artifactName: WebApp
