Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,9 @@ steps:
     projects: '**/try-db-code-web.csproj'
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: $(System.DefaultWorkingDirectory)/bin/WebApp
+    targetPath: $(System.DefaultWorkingDirectory)/try-db-code-web/bin/Debug/net5.0
+    artifactName: WebApp
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: $(System.DefaultWorkingDirectory)/Webshop_db/bin/Debug
     artifactName: WebApp
