--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,7 @@ steps:
     projects: '**/try-db-code-web.csproj'
 - task: SqlAzureDacpacDeployment@1
   inputs:
+    azureConnectionType: 'ConnectedServiceNameARM'
     azureSubscription: '$(azure-subscription)'
     AuthenticationType: 'connectionString'
     ConnectionString: '$(target-server-connection)'
